--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/android-chrome-512x512.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>New Character Leaked</title>
+
+    <meta name="theme-color" content="#242424" />
+
+    <link rel="apple-touch-icon" href="/pwa-192x192.png" />
+    
+    <link rel="icon" href="/pwa-192x192.png" />
+
   </head>
   <body>
     <div id="root"></div>
